--- a/app/web/index.html
+++ b/app/web/index.html
@@ -27,7 +27,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png">
 
-  <title>app</title>
+  <title>Trowpass</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
